Code improvements in signup and login: - Form validation on onblur event - Contrast warning replaced with darker red color (also for addtask and board) - DOM shifting fixed - Responsive fixed

--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -142,11 +142,11 @@ textarea {
 }
 
 .input-error {
-  border-color: #ff6b6b !important;
+  border-color: #8d0000 !important;
 }
 
 .error-message {
-  color: #ff6b6b;
+  color: #8d0000;
   font-size: 16px;
   display: none;
   min-height: 0;
