--- a/styles/board.css
+++ b/styles/board.css
@@ -365,11 +365,11 @@ h1 {
 }
 
 .input-error {
-  border-color: #ff6b6b !important;
+  border-color: #8d0000 !important;
 }
 
 .custom-select.input-error {
-  border: 1px solid #ff6b6b !important;
+  border: 1px solid #8d0000 !important;
 }
 
 .d-none {
@@ -377,7 +377,7 @@ h1 {
 }
 
 .error-message {
-  color: #ff6b6b;
+  color: #8d0000;
   font-size: 16px;
   display: block;
   min-height: 16px;
