--- a/styles/signup-responsive.css
+++ b/styles/signup-responsive.css
@@ -54,6 +54,11 @@
     .back-to-login {
         top: 5%;
     }
+
+    .login-input input {
+        width: 100%;
+        height: 35px;
+    }
 }
 
 @media (max-width: 700px) {
@@ -171,8 +176,10 @@
 
     .btn-signup {
         width: 100px;
-        height: 44px;
-        font-size: 18px;
+        height: 35px;
+        font-size: 16px;
+        margin-top: 12px;
+
     }
 
     .header-left img {
@@ -195,16 +202,21 @@
 
     footer {
         position: relative;
+        bottom: -600%;
+    }
+}
+
+@media (max-width: 380px) {
+    footer {
+        position: relative;
         bottom: -560%;
     }
 }
 
-@media (max-width: 380px) {}
-
 @media (max-width: 360px) {
     .login {
         width: 96vw;
-        height: 460px;
+        height: 470px;
     }
 
     .login h1 {
@@ -218,6 +230,10 @@
         max-width: 300px;
     }
 
+    .login-input input {
+        height: 35px;
+    }
+
     .login-buttons {
         width: 88vw;
         max-width: 240px;
@@ -229,7 +245,12 @@
         top: 2%;
     }
 
+    .error-message {
+        margin-left: 8px;
+        min-width: 260px;
+    }
+
     footer {
-        bottom: -600%;
+        bottom: -535%;
     }
 }
